// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should match a snapshot when I have the full menu 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Apps
          </h1>
          <div
            class="e5lndhu-el-mb8 e6p05ya-el-fade-in e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              My Apps
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              App Details
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Edit App
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Installations
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Pipeline
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              App Consents
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              New App
            </div>
          </div>
          <div
            class="e6p05ya-el-fade-in"
          >
            <span
              class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M44.3202 11.4506C43.78 8.09117 40.7564 5.5127 37.1128 5.5127C35.7421 5.5127 34.4244 5.87747 33.2808 6.55784C31.5474 3.74831 28.4214 2 24.9454 2C19.5756 2 15.1999 6.2022 15.1914 11.3672C15.1914 11.3992 15.1913 11.4324 15.1925 11.4644C11.7405 12.0235 9.01784 14.9176 9.01213 18.3926C9.00577 22.2666 12.358 25.418 16.3857 25.418H43.1667C47.1943 25.418 50.5569 22.2666 50.5633 18.3926C50.5691 14.8879 47.812 11.9755 44.3202 11.4506Z"
                  fill="white"
                />
                <path
                  d="M69.2628 76.3422H40.55C38.0412 76.3361 36.0067 74.3021 36 71.7934V11.2266C36.0067 8.71826 38.0405 6.68447 40.5489 6.67773H69.2639C71.7722 6.68447 73.8059 8.7181 73.8128 11.2263C73.8128 11.2268 73.8128 11.2273 73.8128 11.2278V71.7934C73.8128 71.7939 73.8128 71.7943 73.8128 71.7947C73.8045 74.304 71.7715 76.3361 69.2628 76.3422Z"
                  fill="#7BC9EB"
                  stroke="#262F69"
                  stroke-width="2"
                />
                <path
                  d="M69.2652 77.3427H40.5476C37.488 77.3352 35.0074 74.8547 35 71.795V64.7686C53.2926 64.7685 58.5345 64.7686 74.8128 64.7686V71.7969C74.8035 74.8566 72.3249 77.3352 69.2652 77.3427Z"
                  fill="#31448F"
                />
                <rect
                  fill="white"
                  height="22"
                  rx="11"
                  width="22"
                  x="42"
                  y="15"
                />
                <rect
                  fill="#F2F2F2"
                  height="8.95809"
                  rx="1"
                  width="25.0827"
                  x="42.168"
                  y="48.9014"
                />
                <rect
                  fill="#F2F2F2"
                  height="3.58324"
                  rx="1"
                  width="17.9162"
                  x="42.168"
                  y="43"
                />
                <path
                  d="M46.9214 67.8579C46.9214 66.7641 46.0351 65.8779 44.9421 65.8779H44.1065V46.7123C43.0793 46.7123 42.1071 46.3773 41.298 45.8125C40.754 46.196 40.1279 46.4794 39.4338 46.6171C39.1163 46.6806 38.7923 46.7123 38.4721 46.7123C38.2586 46.7123 38.0536 46.6837 37.8459 46.6566L28.6197 46.4821C28.1708 46.6165 27.7038 46.7116 27.2109 46.7116C26.7193 46.7116 26.253 46.6166 25.8034 46.4821L16.5773 46.6567C16.3704 46.6838 16.164 46.7124 15.9506 46.7124C15.6324 46.7124 15.3096 46.6806 14.9855 46.6166C14.2934 46.4788 13.6685 46.1961 13.124 45.8126C12.3148 46.3773 11.3446 46.7124 10.3182 46.7124L10.3175 65.878H9.48183C8.38803 65.878 7.50195 66.7642 7.50195 67.858C7.50195 68.9518 8.38803 69.8379 9.48183 69.8379H44.942C46.0351 69.8378 46.9214 68.9517 46.9214 67.8579Z"
                  fill="#0061A8"
                />
                <path
                  d="M3.71672 50.7332C4.07924 50.8486 4.4454 50.9035 4.80616 50.9035C6.44357 50.9035 7.956 49.7675 8.4488 48.0084L8.64878 47.296C8.78423 48.5895 9.49376 49.7293 10.5552 50.3672C10.8977 50.5702 11.2629 50.7378 11.6683 50.8235C11.9191 50.8777 12.169 50.9035 12.4145 50.9035C14.1925 50.9035 15.7819 49.5691 16.141 47.6395L16.2337 47.1451C16.3289 48.5205 17.0681 49.7321 18.1671 50.3867C18.6084 50.6503 19.1048 50.8244 19.6412 50.8823C19.7695 50.8971 19.8972 50.9028 20.0229 50.9028C21.9532 50.9028 23.6071 49.342 23.8035 47.2503L23.8316 46.9495C24.3398 53.036 31.7646 51.5605 31.7646 47.1451L31.8574 47.6395C32.2181 49.5699 33.8065 50.9035 35.5838 50.9035C35.8301 50.9035 36.0791 50.8776 36.3309 50.8235C36.7344 50.7378 37.1014 50.5702 37.4422 50.3672C38.5055 49.7292 39.215 48.5895 39.3504 47.296L39.5504 48.0084C40.0433 49.7675 41.5556 50.9035 43.1938 50.9035C43.5539 50.9035 43.92 50.8486 44.2825 50.7332C46.2965 50.0924 47.441 47.8333 46.84 45.6887L43.5871 34.0863C42.9075 31.6614 40.8148 30 38.441 30H9.55928C7.18437 30 5.09182 31.6614 4.41214 34.0863L1.16 45.6887C0.558945 47.8334 1.70367 50.0925 3.71672 50.7332Z"
                  fill="#23A4DE"
                />
                <rect
                  fill="#F2F2F2"
                  height="6"
                  rx="1"
                  width="9"
                  x="15"
                  y="54"
                />
                <rect
                  fill="#F2F2F2"
                  height="6"
                  rx="1"
                  width="9"
                  x="30"
                  y="54"
                />
                <path
                  d="M61.7871 35.3711C63.4043 36.4466 63.4043 38.5534 61.7871 39.6289L35.0072 57.4373C32.9621 58.7973 30 57.5379 30 55.3084L30 19.6916C30 17.4621 32.9621 16.2027 35.0072 17.5627L61.7871 35.3711Z"
                  fill="#FFB71B"
                />
              </svg>
            </span>
            <h2
              class="e1byern-el-subtitle"
            >
              Preview in AppMarket
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-small-text"
            >
              Clicking below will take you to your current AppMarket listing, to view your app as users will see it.
            </p>
            <button
              class="esplruv-el-mb3 ebee6r1-el-intent-primary eqfkc7t-el-button"
            >
              Preview
            </button>
          </div>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            will-test-dev-co-voracious-person
          </h1>
          <h2
            class="e1byern-el-subtitle"
          >
            Authenticating Your App
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
          >
            Client-side Apps use our identity provider
             
            <a>
              Reapit Connect
            </a>
             to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
             
            <a>
              Authorization Code flow.
            </a>
             You will need the Client Id and Redirect Uris below to configure Reapit Connect.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
          >
            To make this process easier, we provide you with an authentication module for client-side apps,
             
            <a>
              Connect Session
            </a>
            , which comes bundled with our
             
            <a>
              Create React App Template
            </a>
             for quick start client-side development.
          </p>
          <div
            class="e20pb60-el-grid"
          >
            <div
              class="e14pp0yd-el-col"
            >
              <div
                class="e2kmzjs-el-flex-container"
              >
                <span
                  class="elmeic8-el-mr4 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 38 40"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24.7684 16.5518H23.2632C16.4211 16.552 7.5 16.5516 2.73684 16.5518H1.23158C0.547369 16.5518 0 17.1035 0 17.7932V38.7587C0 39.4345 0.547369 40.0001 1.23158 40.0001H24.7684C25.4526 40.0001 26 39.4345 26 38.7587V17.7932C26 17.1035 25.4526 16.5518 24.7684 16.5518ZM9.57895 26.8966C9.57895 24.9932 11.1116 23.4483 13 23.4483C14.8884 23.4483 16.4211 24.9932 16.4211 26.8966C16.4211 28.0001 15.9147 29.007 15.0526 29.6552V32.4139C15.0526 33.5587 14.1358 34.4828 13 34.4828C11.8642 34.4828 10.9474 33.5587 10.9474 32.4139V29.6552C10.0853 29.007 9.57895 28.0001 9.57895 26.8966Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M23.2626 16.5517V10.3448C23.2626 4.63448 18.6647 0 12.9995 0C7.33422 0 2.73633 4.63448 2.73633 10.3448V16.5517C4.5 16.5517 21.5004 16.5517 23.2626 16.5517ZM6.84158 10.3448C6.84158 6.92414 9.6058 4.13793 12.9995 4.13793C16.3932 4.13793 19.1574 6.92414 19.1574 10.3448V16.5517H6.84158V10.3448Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M32.0357 37.0047L31.9979 39.9254L37.9244 40L38 34.1585L28.4924 24.5449C29.2691 21.7795 28.568 18.7034 26.374 16.4849C23.156 13.231 17.8222 13.1639 14.521 16.3358C11.2198 19.5076 11.1518 24.7649 14.3697 28.0188C16.5638 30.2373 19.6657 31.0066 22.4903 30.3118L23.2216 31.0514L26.1849 31.0886L26.147 34.0094L29.1103 34.0467L29.0725 36.9674L32.0357 37.0047ZM15.9459 20.7355C15.2145 19.996 15.2334 18.5356 15.9837 17.8148C16.734 17.0939 18.2156 17.1125 18.9469 17.852C19.8246 18.7395 19.6594 20.0519 18.9091 20.7728C18.0088 21.6378 16.8235 21.6229 15.9459 20.7355Z"
                      fill="#FFB71B"
                    />
                  </svg>
                </span>
                <div>
                  <h2
                    class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                  >
                    Authentication Client Id
                  </h2>
                  <p
                    class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
                  >
                    MOCK_EXTERNAL_ID
                  </p>
                </div>
              </div>
              <button
                class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
              >
                Copy
              </button>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <div
                class="e2kmzjs-el-flex-container"
              >
                <span
                  class="elmeic8-el-mr4 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 80 81"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                      fill="#262F69"
                    />
                    <path
                      d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                      fill="#262F69"
                    />
                    <path
                      d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                      fill="#262F69"
                    />
                    <path
                      d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                      fill="white"
                    />
                    <path
                      d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                      fill="#262F69"
                    />
                    <path
                      d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                      fill="#32BCFA"
                    />
                    <path
                      d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                      fill="#31448F"
                    />
                    <path
                      d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                      fill="#262F69"
                    />
                    <path
                      d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                      fill="#FABE3D"
                    />
                    <path
                      d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                      fill="#23A4DE"
                    />
                    <rect
                      fill="#FFE5C7"
                      height="10.2818"
                      rx="4"
                      transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                      width="10.2439"
                    />
                    <rect
                      fill="#FFB71B"
                      height="19.3572"
                      rx="6"
                      transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                      width="19.2099"
                    />
                    <rect
                      fill="#FFE5C7"
                      height="7.85"
                      rx="3"
                      transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                      width="7.74445"
                    />
                  </svg>
                </span>
                <div>
                  <h2
                    class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                  >
                    App Id
                  </h2>
                  <p
                    class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
                  >
                    MOCK_APP_ID
                  </p>
                </div>
              </div>
              <button
                class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
              >
                Copy
              </button>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <h2
                class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
              >
                Redirect Uri(s)
              </h2>
              <p
                class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
              >
                https://foo.bar
              </p>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <h2
                class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
              >
                Sign Out Uri(s)
              </h2>
              <p
                class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
              >
                https://foo.bar
              </p>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <div
                class="e14pp0yd-el-col"
              >
                <h2
                  class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                >
                  Integration Type
                </h2>
                <p
                  class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
                >
                  You have a client side authenticated integration that will not render within the AgencyCloud desktop CRM
                </p>
              </div>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <div
                class="e14pp0yd-el-col"
              >
                <h2
                  class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                >
                  App Status
                </h2>
                <p
                  class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
                >
                  Your app is live and public in the AppMarket with a pending revision under review
                </p>
              </div>
            </div>
            <div
              class="e14pp0yd-el-col"
            >
              <h2
                class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
              >
                Permissions
              </h2>
              <div
                class="p11sa0f-permission-chip"
              >
                Read applicants
              </div>
              <div
                class="p11sa0f-permission-chip"
              >
                Read property images
              </div>
              <div
                class="p11sa0f-permission-chip"
              >
                Read properties
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Apps
        </h1>
        <div
          class="e5lndhu-el-mb8 e6p05ya-el-fade-in e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            My Apps
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            App Details
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Edit App
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Installations
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Pipeline
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            App Consents
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            New App
          </div>
        </div>
        <div
          class="e6p05ya-el-fade-in"
        >
          <span
            class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M44.3202 11.4506C43.78 8.09117 40.7564 5.5127 37.1128 5.5127C35.7421 5.5127 34.4244 5.87747 33.2808 6.55784C31.5474 3.74831 28.4214 2 24.9454 2C19.5756 2 15.1999 6.2022 15.1914 11.3672C15.1914 11.3992 15.1913 11.4324 15.1925 11.4644C11.7405 12.0235 9.01784 14.9176 9.01213 18.3926C9.00577 22.2666 12.358 25.418 16.3857 25.418H43.1667C47.1943 25.418 50.5569 22.2666 50.5633 18.3926C50.5691 14.8879 47.812 11.9755 44.3202 11.4506Z"
                fill="white"
              />
              <path
                d="M69.2628 76.3422H40.55C38.0412 76.3361 36.0067 74.3021 36 71.7934V11.2266C36.0067 8.71826 38.0405 6.68447 40.5489 6.67773H69.2639C71.7722 6.68447 73.8059 8.7181 73.8128 11.2263C73.8128 11.2268 73.8128 11.2273 73.8128 11.2278V71.7934C73.8128 71.7939 73.8128 71.7943 73.8128 71.7947C73.8045 74.304 71.7715 76.3361 69.2628 76.3422Z"
                fill="#7BC9EB"
                stroke="#262F69"
                stroke-width="2"
              />
              <path
                d="M69.2652 77.3427H40.5476C37.488 77.3352 35.0074 74.8547 35 71.795V64.7686C53.2926 64.7685 58.5345 64.7686 74.8128 64.7686V71.7969C74.8035 74.8566 72.3249 77.3352 69.2652 77.3427Z"
                fill="#31448F"
              />
              <rect
                fill="white"
                height="22"
                rx="11"
                width="22"
                x="42"
                y="15"
              />
              <rect
                fill="#F2F2F2"
                height="8.95809"
                rx="1"
                width="25.0827"
                x="42.168"
                y="48.9014"
              />
              <rect
                fill="#F2F2F2"
                height="3.58324"
                rx="1"
                width="17.9162"
                x="42.168"
                y="43"
              />
              <path
                d="M46.9214 67.8579C46.9214 66.7641 46.0351 65.8779 44.9421 65.8779H44.1065V46.7123C43.0793 46.7123 42.1071 46.3773 41.298 45.8125C40.754 46.196 40.1279 46.4794 39.4338 46.6171C39.1163 46.6806 38.7923 46.7123 38.4721 46.7123C38.2586 46.7123 38.0536 46.6837 37.8459 46.6566L28.6197 46.4821C28.1708 46.6165 27.7038 46.7116 27.2109 46.7116C26.7193 46.7116 26.253 46.6166 25.8034 46.4821L16.5773 46.6567C16.3704 46.6838 16.164 46.7124 15.9506 46.7124C15.6324 46.7124 15.3096 46.6806 14.9855 46.6166C14.2934 46.4788 13.6685 46.1961 13.124 45.8126C12.3148 46.3773 11.3446 46.7124 10.3182 46.7124L10.3175 65.878H9.48183C8.38803 65.878 7.50195 66.7642 7.50195 67.858C7.50195 68.9518 8.38803 69.8379 9.48183 69.8379H44.942C46.0351 69.8378 46.9214 68.9517 46.9214 67.8579Z"
                fill="#0061A8"
              />
              <path
                d="M3.71672 50.7332C4.07924 50.8486 4.4454 50.9035 4.80616 50.9035C6.44357 50.9035 7.956 49.7675 8.4488 48.0084L8.64878 47.296C8.78423 48.5895 9.49376 49.7293 10.5552 50.3672C10.8977 50.5702 11.2629 50.7378 11.6683 50.8235C11.9191 50.8777 12.169 50.9035 12.4145 50.9035C14.1925 50.9035 15.7819 49.5691 16.141 47.6395L16.2337 47.1451C16.3289 48.5205 17.0681 49.7321 18.1671 50.3867C18.6084 50.6503 19.1048 50.8244 19.6412 50.8823C19.7695 50.8971 19.8972 50.9028 20.0229 50.9028C21.9532 50.9028 23.6071 49.342 23.8035 47.2503L23.8316 46.9495C24.3398 53.036 31.7646 51.5605 31.7646 47.1451L31.8574 47.6395C32.2181 49.5699 33.8065 50.9035 35.5838 50.9035C35.8301 50.9035 36.0791 50.8776 36.3309 50.8235C36.7344 50.7378 37.1014 50.5702 37.4422 50.3672C38.5055 49.7292 39.215 48.5895 39.3504 47.296L39.5504 48.0084C40.0433 49.7675 41.5556 50.9035 43.1938 50.9035C43.5539 50.9035 43.92 50.8486 44.2825 50.7332C46.2965 50.0924 47.441 47.8333 46.84 45.6887L43.5871 34.0863C42.9075 31.6614 40.8148 30 38.441 30H9.55928C7.18437 30 5.09182 31.6614 4.41214 34.0863L1.16 45.6887C0.558945 47.8334 1.70367 50.0925 3.71672 50.7332Z"
                fill="#23A4DE"
              />
              <rect
                fill="#F2F2F2"
                height="6"
                rx="1"
                width="9"
                x="15"
                y="54"
              />
              <rect
                fill="#F2F2F2"
                height="6"
                rx="1"
                width="9"
                x="30"
                y="54"
              />
              <path
                d="M61.7871 35.3711C63.4043 36.4466 63.4043 38.5534 61.7871 39.6289L35.0072 57.4373C32.9621 58.7973 30 57.5379 30 55.3084L30 19.6916C30 17.4621 32.9621 16.2027 35.0072 17.5627L61.7871 35.3711Z"
                fill="#FFB71B"
              />
            </svg>
          </span>
          <h2
            class="e1byern-el-subtitle"
          >
            Preview in AppMarket
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-small-text"
          >
            Clicking below will take you to your current AppMarket listing, to view your app as users will see it.
          </p>
          <button
            class="esplruv-el-mb3 ebee6r1-el-intent-primary eqfkc7t-el-button"
          >
            Preview
          </button>
        </div>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          will-test-dev-co-voracious-person
        </h1>
        <h2
          class="e1byern-el-subtitle"
        >
          Authenticating Your App
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          Client-side Apps use our identity provider
           
          <a>
            Reapit Connect
          </a>
           to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
           
          <a>
            Authorization Code flow.
          </a>
           You will need the Client Id and Redirect Uris below to configure Reapit Connect.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
        >
          To make this process easier, we provide you with an authentication module for client-side apps,
           
          <a>
            Connect Session
          </a>
          , which comes bundled with our
           
          <a>
            Create React App Template
          </a>
           for quick start client-side development.
        </p>
        <div
          class="e20pb60-el-grid"
        >
          <div
            class="e14pp0yd-el-col"
          >
            <div
              class="e2kmzjs-el-flex-container"
            >
              <span
                class="elmeic8-el-mr4 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 38 40"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24.7684 16.5518H23.2632C16.4211 16.552 7.5 16.5516 2.73684 16.5518H1.23158C0.547369 16.5518 0 17.1035 0 17.7932V38.7587C0 39.4345 0.547369 40.0001 1.23158 40.0001H24.7684C25.4526 40.0001 26 39.4345 26 38.7587V17.7932C26 17.1035 25.4526 16.5518 24.7684 16.5518ZM9.57895 26.8966C9.57895 24.9932 11.1116 23.4483 13 23.4483C14.8884 23.4483 16.4211 24.9932 16.4211 26.8966C16.4211 28.0001 15.9147 29.007 15.0526 29.6552V32.4139C15.0526 33.5587 14.1358 34.4828 13 34.4828C11.8642 34.4828 10.9474 33.5587 10.9474 32.4139V29.6552C10.0853 29.007 9.57895 28.0001 9.57895 26.8966Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M23.2626 16.5517V10.3448C23.2626 4.63448 18.6647 0 12.9995 0C7.33422 0 2.73633 4.63448 2.73633 10.3448V16.5517C4.5 16.5517 21.5004 16.5517 23.2626 16.5517ZM6.84158 10.3448C6.84158 6.92414 9.6058 4.13793 12.9995 4.13793C16.3932 4.13793 19.1574 6.92414 19.1574 10.3448V16.5517H6.84158V10.3448Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M32.0357 37.0047L31.9979 39.9254L37.9244 40L38 34.1585L28.4924 24.5449C29.2691 21.7795 28.568 18.7034 26.374 16.4849C23.156 13.231 17.8222 13.1639 14.521 16.3358C11.2198 19.5076 11.1518 24.7649 14.3697 28.0188C16.5638 30.2373 19.6657 31.0066 22.4903 30.3118L23.2216 31.0514L26.1849 31.0886L26.147 34.0094L29.1103 34.0467L29.0725 36.9674L32.0357 37.0047ZM15.9459 20.7355C15.2145 19.996 15.2334 18.5356 15.9837 17.8148C16.734 17.0939 18.2156 17.1125 18.9469 17.852C19.8246 18.7395 19.6594 20.0519 18.9091 20.7728C18.0088 21.6378 16.8235 21.6229 15.9459 20.7355Z"
                    fill="#FFB71B"
                  />
                </svg>
              </span>
              <div>
                <h2
                  class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                >
                  Authentication Client Id
                </h2>
                <p
                  class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
                >
                  MOCK_EXTERNAL_ID
                </p>
              </div>
            </div>
            <button
              class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
            >
              Copy
            </button>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <div
              class="e2kmzjs-el-flex-container"
            >
              <span
                class="elmeic8-el-mr4 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 80 81"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                    fill="#262F69"
                  />
                  <path
                    d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                    fill="#262F69"
                  />
                  <path
                    d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                    fill="#262F69"
                  />
                  <path
                    d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                    fill="white"
                  />
                  <path
                    d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                    fill="#262F69"
                  />
                  <path
                    d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                    fill="#32BCFA"
                  />
                  <path
                    d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                    fill="#31448F"
                  />
                  <path
                    d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                    fill="#262F69"
                  />
                  <path
                    d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                    fill="#FABE3D"
                  />
                  <path
                    d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                    fill="#23A4DE"
                  />
                  <rect
                    fill="#FFE5C7"
                    height="10.2818"
                    rx="4"
                    transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                    width="10.2439"
                  />
                  <rect
                    fill="#FFB71B"
                    height="19.3572"
                    rx="6"
                    transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                    width="19.2099"
                  />
                  <rect
                    fill="#FFE5C7"
                    height="7.85"
                    rx="3"
                    transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                    width="7.74445"
                  />
                </svg>
              </span>
              <div>
                <h2
                  class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
                >
                  App Id
                </h2>
                <p
                  class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
                >
                  MOCK_APP_ID
                </p>
              </div>
            </div>
            <button
              class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
            >
              Copy
            </button>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <h2
              class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
            >
              Redirect Uri(s)
            </h2>
            <p
              class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
            >
              https://foo.bar
            </p>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <h2
              class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
            >
              Sign Out Uri(s)
            </h2>
            <p
              class="t11sr6l7-text-overflow e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
            >
              https://foo.bar
            </p>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <div
              class="e14pp0yd-el-col"
            >
              <h2
                class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
              >
                Integration Type
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
              >
                You have a client side authenticated integration that will not render within the AgencyCloud desktop CRM
              </p>
            </div>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <div
              class="e14pp0yd-el-col"
            >
              <h2
                class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
              >
                App Status
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e15ggth7-el-body-text"
              >
                Your app is live and public in the AppMarket with a pending revision under review
              </p>
            </div>
          </div>
          <div
            class="e14pp0yd-el-col"
          >
            <h2
              class="ewfctk4-el-has-no-margin e1byern-el-subtitle"
            >
              Permissions
            </h2>
            <div
              class="p11sa0f-permission-chip"
            >
              Read applicants
            </div>
            <div
              class="p11sa0f-permission-chip"
            >
              Read property images
            </div>
            <div
              class="p11sa0f-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Apps
          </h1>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <div
            class="ebhrnzh-el-loader-container"
          >
            <div
              class="eq1m1jz-el-loader"
            >
              <div
                class="exikdu1-el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Apps
        </h1>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <div
          class="ebhrnzh-el-loader-container"
        >
          <div
            class="eq1m1jz-el-loader"
          >
            <div
              class="exikdu1-el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are present 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Apps
          </h1>
          <div
            class="e5lndhu-el-mb8 e6p05ya-el-fade-in e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              My Apps
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              New App
            </div>
          </div>
          <div
            class="e6p05ya-el-fade-in"
          >
            <span
              class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 81"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                  fill="#23A4DE"
                />
                <path
                  d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                  fill="#0061A8"
                />
                <path
                  d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                  fill="#262F69"
                />
                <path
                  d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                  fill="#262F69"
                />
                <path
                  d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                  fill="#262F69"
                />
                <path
                  d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                  fill="white"
                />
                <path
                  d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                  fill="#262F69"
                />
                <path
                  d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                  fill="#0061A8"
                />
                <path
                  d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                  fill="#32BCFA"
                />
                <path
                  d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                  fill="#31448F"
                />
                <path
                  d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                  fill="#262F69"
                />
                <path
                  d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                  fill="#FABE3D"
                />
                <path
                  d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                  fill="#23A4DE"
                />
                <rect
                  fill="#FFE5C7"
                  height="10.2818"
                  rx="4"
                  transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                  width="10.2439"
                />
                <rect
                  fill="#FFB71B"
                  height="19.3572"
                  rx="6"
                  transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                  width="19.2099"
                />
                <rect
                  fill="#FFE5C7"
                  height="7.85"
                  rx="3"
                  transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                  width="7.74445"
                />
              </svg>
            </span>
            <h2
              class="e1byern-el-subtitle"
            >
              Apps Documentation
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text e1wasvgh-el-small-text"
            >
              This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
            </p>
            <button
              class="esplruv-el-mb3 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
            >
              View Docs
            </button>
          </div>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Apps
        </h1>
        <div
          class="e5lndhu-el-mb8 e6p05ya-el-fade-in e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            My Apps
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            New App
          </div>
        </div>
        <div
          class="e6p05ya-el-fade-in"
        >
          <span
            class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 81"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M68.0839 32.5781L39.9172 22.6511L11.7505 32.5781L39.9172 42.6555L68.0839 32.5781Z"
                fill="#23A4DE"
              />
              <path
                d="M68.0842 32.5781L39.9175 22.6511V42.6555L68.0842 32.5781Z"
                fill="#0061A8"
              />
              <path
                d="M50.5783 7.46606H28.611C26.4797 7.46606 24.7457 9.23906 24.7457 11.4178V58.7411C24.7457 60.9199 26.4797 62.6929 28.611 62.6929H50.5783C52.7097 62.6929 54.4441 60.9199 54.4441 58.7411V11.4178C54.4441 9.23906 52.7097 7.46606 50.5783 7.46606V7.46606Z"
                fill="#262F69"
              />
              <path
                d="M32.189 10.3965C31.9798 10.0786 31.8576 9.69614 31.8576 9.28426C31.8576 8.47572 32.3286 7.78095 33.0042 7.46606H28.6113C26.4764 7.46606 24.7455 9.2355 24.7455 11.4178V58.7411C24.7455 60.9235 26.4764 62.6924 28.6113 62.6924H33.2815V13.8597C33.2815 12.6169 32.8676 11.428 32.189 10.3965Z"
                fill="#262F69"
              />
              <path
                d="M26.9832 32.426V58.7411C26.9832 59.6603 27.712 60.4054 28.6108 60.4054H50.578C51.4768 60.4054 52.2056 59.6603 52.2056 58.7411C52.2056 57.8381 52.2056 44.6557 52.2056 32.426H26.9832Z"
                fill="#262F69"
              />
              <path
                d="M50.5653 9.75391H47.3006C46.9926 9.75391 46.7432 10.0089 46.7432 10.3232C46.7432 11.0784 46.1391 11.696 45.4008 11.696H33.7636C33.0248 11.696 32.4207 11.0784 32.4207 10.3232C32.4207 10.0089 32.1712 9.75391 31.8632 9.75391H28.5986C27.6993 9.75391 26.9705 10.499 26.9705 11.4177V48.7548H52.1934V11.4177C52.1934 10.499 51.4645 9.75391 50.5653 9.75391Z"
                fill="white"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V43.0087H28.9352V28.5258Z"
                fill="#262F69"
              />
              <path
                d="M28.9352 28.5258L39.6076 18.0381L50.2801 28.5258V36.7661L28.9352 28.5258Z"
                fill="#7BC9EB"
              />
              <path
                d="M50.2801 43.0087H44.0328L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258V43.0087Z"
                fill="#0061A8"
              />
              <path
                d="M50.2801 28.5258V36.7661L39.6077 32.6977L35.1825 22.3866L39.6077 18.0381L50.2801 28.5258Z"
                fill="#32BCFA"
              />
              <path
                d="M39.9172 42.6831L11.7505 32.5779V68.9179L39.9172 78.0015V42.6831Z"
                fill="#31448F"
              />
              <path
                d="M68.0842 68.9179V32.5779L39.9175 42.6831V78.0015L68.0842 68.9179Z"
                fill="#262F69"
              />
              <path
                d="M11.7504 32.5784L1.99976 44.3104L30.6966 54.9142L39.9171 42.6558L11.7504 32.5784Z"
                fill="#7BC9EB"
              />
              <path
                d="M68.0842 32.5781L77.8381 44.3101L49.1413 54.9139L39.9175 42.6555L68.0842 32.5781Z"
                fill="#FABE3D"
              />
              <path
                d="M68.0842 32.5779L77.8381 44.3099L49.1413 54.9137L39.9175 42.6553L68.0842 32.5779Z"
                fill="#23A4DE"
              />
              <rect
                fill="#FFE5C7"
                height="10.2818"
                rx="4"
                transform="matrix(0.762524 -0.64696 0.631676 0.775232 44.3977 27.4504)"
                width="10.2439"
              />
              <rect
                fill="#FFB71B"
                height="19.3572"
                rx="6"
                transform="matrix(0.849949 0.526866 -0.514212 0.857663 19.7162 2)"
                width="19.2099"
              />
              <rect
                fill="#FFE5C7"
                height="7.85"
                rx="3"
                transform="matrix(0.950312 0.311297 -0.302034 0.953297 58.7117 2.60693)"
                width="7.74445"
              />
            </svg>
          </span>
          <h2
            class="e1byern-el-subtitle"
          >
            Apps Documentation
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-small-text"
          >
            This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
          </p>
          <button
            class="esplruv-el-mb3 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            View Docs
          </button>
        </div>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when no apps are created 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
